pkg/lang/testdata/ub/inputs/valid/parsed-open-object.ub

inputs: {
  payload: { type: open(object({ kind: string })) }
}
