pkg/lang/testdata/ub/inputs/invalid/nested-sensitive.ub
inputs: {
  spec: {
    type: object({
      token: { type: string, @sensitive: true },
    })
  }
}
